[package]
name = "cortenforge-data-contracts"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Data contracts for run manifests and capture metadata used across the CortenForge stack."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-data-contracts"
readme = "README.md"
keywords = ["data", "contracts", "serde", "manifest"]
categories = ["data-structures"]
rust-version = "1.75"

[lib]
name = "data_contracts"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
