[package]
name = "cortenforge-inference"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Detector factory and inference helpers (Burn-backed or heuristic) for the CortenForge stack."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-inference"
readme = "README.md"
keywords = ["inference", "burn", "detector", "bevy"]
categories = ["science", "computer-vision", "game-engines"]
rust-version = "1.75"

[features]
default = ["backend-ndarray", "tinydet"]
backend-ndarray = ["burn-ndarray", "burn/ndarray"]
backend-wgpu = ["burn-wgpu", "burn/wgpu"]
tinydet = ["models/tinydet"]
bigdet = ["models/bigdet"]

[lib]
name = "inference"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
vision_core = { package = "cortenforge-vision-core", version = "0.1.5" }
sim_core = { package = "cortenforge-sim-core", version = "0.1.5" }
bevy = { workspace = true }
burn = { workspace = true, features = ["autodiff"] }
burn-ndarray = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true}
models = { package = "cortenforge-models", version = "0.1.5" }
bincode = { workspace = true }
