[package]
name = "cortenforge-models"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Burn-based model definitions (TinyDet/BigDet) for the CortenForge stack."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/models"
readme = "README.md"
keywords = ["burn", "models", "detector", "ml"]
categories = ["science", "computer-vision", "data-structures"]
rust-version = "1.75"

[lib]
name = "models"

[dependencies]
burn = { workspace = true, features = ["autodiff", "std"] }
bincode = { workspace = true }

[features]
default = ["tinydet"]
tinydet = []
bigdet = []
