[package]
name = "cortenforge-vision-runtime"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Bevy plugins for capture and inference runtime built on vision_core for the CortenForge stack. Renamed from vision_runtime; old crate deprecated—use this name."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-vision-runtime"
readme = "README.md"
keywords = ["bevy", "vision", "capture", "inference"]
categories = ["game-engines", "graphics", "computer-vision"]
rust-version = "1.75"

[lib]
name = "vision_runtime"

[dependencies]
bevy = { workspace = true, features = ["bevy_render", "bevy_asset", "bevy_core_pipeline", "bevy_winit", "bevy_log", "x11"] } # x11 required for winit on Linux CI
bevy_camera = { workspace = true }
sim_core = { package = "cortenforge-sim-core", version = "0.1.5" }
vision_core = { package = "cortenforge-vision-core", version = "0.1.5" }
anyhow = { workspace = true }
image = { workspace = true, features = ["png"] }
futures-lite = { workspace = true }
